Add new admin screen to create Regions.

--- a/resources/less/admin/modules/form-fields.less
+++ b/resources/less/admin/modules/form-fields.less
@@ -32,11 +32,14 @@
 .awpcp-admin-form-text-field-with-left-label,
 .awpcp-admin-form-textarea,
 .awpcp-admin-form-checkbox,
+.awpcp-admin-form-select,
 .awpcp-admin-form-radio-buttons {
     margin-bottom: 6px;
 }
 
-.awpcp-admin-form-textfield {
+.awpcp-admin-form-field {
+    margin-bottom: 6px;
+
     label {
         display: block;
     }
@@ -85,6 +88,15 @@
     label {
         display: block;
         margin-bottom: 4px;
+    }
+}
+
+.awpcp-admin-form-select {
+    label {
+        display: block;
+    }
+    select {
+        width: 100%;
     }
 }
 
