Replace jQuery Breakpoins implementation.

--- a/resources/less/components/media-manager.less
+++ b/resources/less/components/media-manager.less
@@ -23,7 +23,7 @@
         border: 1px solid #E2E2E2;
         box-sizing: border-box;
         list-style-type: none;
-        margin: 0 0 25px;
+        margin: 0 0 10px;
         position: relative;
         padding: 3px;
         text-align: center;
@@ -230,7 +230,7 @@
 }
 
 #classiwrapper, .awpcp-media-center {
-    .awpcp-media-manager-480 {
+    .awpcp-media-manager-small {
         .awpcp-uploaded-file {
             float: left;
             width: 49%;
@@ -245,7 +245,7 @@
         }
     }
 
-    .awpcp-media-manager-680 {
+    .awpcp-media-manager-medium {
         .awpcp-uploaded-file {
             float: left;
             width: 32%;
@@ -260,10 +260,14 @@
         }
     }
 
-    .awpcp-media-manager-992 {
+    .awpcp-media-manager-large {
+        .awpcp-uploaded-files-list {
+            margin-left: -9px;
+            margin-right: -9px;
+        }
         .awpcp-uploaded-file {
             float: left;
-            width: 230px;
+            width: 205px;
             margin-right: 9px;
             margin-left: 9px;
         }
