Update template for List of Listings.

--- a/resources/less/frontend.less
+++ b/resources/less/frontend.less
@@ -10,6 +10,7 @@
 @import 'tables.less';
 
 @import 'frontend/modules/listings.less';
+@import 'frontend/modules/listing-excerpt.less';
 
 @import 'components/category-dropdown.less';
 @import 'components/categories-list.less';
