Add Classifieds Bar component.

--- a/resources/less/frontend.less
+++ b/resources/less/frontend.less
@@ -15,6 +15,8 @@
 @import 'components/billing-form.less';
 @import 'components/category-dropdown.less';
 @import 'components/categories-list.less';
+@import 'components/classifieds-search-bar.less';
+@import 'components/classifieds-menu.less';
 @import 'components/form-steps.less';
 @import 'components/listings-widget.less';
 @import 'components/listing-actions.less';
