Add awpcp-listing-primary-image-thumbnail CSS class.
Necessary to prevent applying the thumbnail styles
to other IMG elements present in the listing's
content (such as the Sold ribbon from Mark as Sold).

--- a/resources/less/frontend/modules/listing-excerpt.less
+++ b/resources/less/frontend/modules/listing-excerpt.less
@@ -10,11 +10,11 @@
 }
 .awpcp-listing-primary-image-listing-link {
     display: block;
-
-    img {
-        width: 100%;
-    }
 }
+.awpcp-listing-primary-image-thumbnail {
+    width: 100%;
+}
+
 .awpcp-listing-excerpt-content {
     .awpcp-listing-title {
         margin: 0 0 10px;
@@ -42,9 +42,9 @@
 .awpcp-listing-excerpt-medium {
     .awpcp-listing-excerpt-thumbnail {
         width: auto;
+    }
 
-        img {
-            width: auto;
-        }
+    .awpcp-listing-primary-image-thumbnail {
+        width: auto;
     }
 }
