Fix appearance of RSS icon in core themes.

--- a/resources/less/components/classifieds-menu.less
+++ b/resources/less/components/classifieds-menu.less
@@ -9,6 +9,9 @@
     padding-right: 8pt;
     margin: 0 0 4pt;
 }
+.awpcp-classifieds-menu--menu-item a img {
+    display: inline-block;
+}
 .awpcp-classifieds-menu--menu-item-link {
     box-sizing: border-box;
     text-align: center;
