Show change button if multiple dropdowns are enabled. (#1934)

--- a/resources/less/legacy/frontend.less
+++ b/resources/less/legacy/frontend.less
@@ -377,6 +377,9 @@ img.awpcpbrowseadsimg  { width:60px; }
 .changecategoryselect .awpcp-category-dropdown-container {
     float: left;
 }
+.awpcp-single-dropdown-category-selector-container .awpcp-category-dropdown-label {
+    display: inline-block;
+}
 
 .pager { float:right; }
 .pager a { padding:2px; border:1px solid #cccccc; }
