Add Quick View Listing admin action.

--- a/resources/less/admin.less
+++ b/resources/less/admin.less
@@ -17,10 +17,12 @@
 @import 'admin/modules/import-listings.less';
 @import 'admin/modules/fees.less';
 @import 'admin/modules/manage-categories.less';
+@import 'admin/modules/quick-view-listing-admin-page.less';
 
 @import 'components/admin-sidebar.less';
 @import 'components/asynchronous-tasks.less';
 @import 'components/form-steps.less';
+@import 'components/listing-content-legacy.less';
 @import 'components/media-manager.less';
 @import 'components/media-uploader.less';
 @import 'components/payment-terms-list.less';
