--- a/resources/less/common.less
+++ b/resources/less/common.less
@@ -1,3 +1,10 @@
+/* old clearfix */
+.fixfloat {
+    clear:both;
+    display:block;
+    overflow:hidden;
+}
+
 /* new clearfix */
 .clearfix:after, .awpcp-clearfix:after {
     visibility: hidden;
