--- a/resources/less/frontend.less
+++ b/resources/less/frontend.less
@@ -20,6 +20,7 @@
 @import 'components/form-steps.less';
 @import 'components/listings-widget.less';
 @import 'components/listing-actions.less';
+@import 'components/listing-content-legacy.less';
 @import 'components/main-menu.less';
 @import 'components/media-manager.less';
 @import 'components/media-uploader.less';
