Improve Form Fields appearance on admin.

--- a/resources/less/admin.less
+++ b/resources/less/admin.less
@@ -1,3 +1,9 @@
+@import 'tiny.less';
+
+@media (min-width: 1024px) {
+    @import 'large.less';
+}
+
 @import 'legacy/admin.less';
 
 @import 'common/spinner.less';
