--- a/resources/css/awpcp-admin.css
+++ b/resources/css/awpcp-admin.css
@@ -1,3 +1,72 @@
+/* Styles for the fields using to enter the classified details. */
+.awpcp-form-field {
+  margin: 1em 0;
+}
+.awpcp-form-field label {
+  box-sizing: border-box;
+  display: block;
+}
+.awpcp-form-field input[type="email"],
+.awpcp-form-field input[type="password"],
+.awpcp-form-field input[type="search"],
+.awpcp-form-field input[type="tel"],
+.awpcp-form-field input[type="text"],
+.awpcp-form-field input[type="url"],
+.awpcp-form-field textarea,
+.awpcp-form-field select {
+  box-sizing: border-box;
+  width: 100%;
+}
+.awpcp-form-field input[type="checkbox"],
+.awpcp-form-field input[type="radio"] {
+  margin-bottom: 8px;
+}
+.awpcp-price-form-field__currency-symbol-container {
+  display: inline-block;
+  position: relative;
+  width: 100%;
+}
+.awpcp-price-form-field__currency-symbol-container.--currency-symbol-on-left span {
+  position: absolute;
+  top: 8px;
+  left: 8px;
+}
+.awpcp-price-form-field__currency-symbol-container.--currency-symbol-on-left input {
+  padding-left: 20px;
+}
+.awpcp-price-form-field__currency-symbol-container.--currency-symbol-on-right span {
+  position: absolute;
+  top: 8px;
+  right: 8px;
+}
+.awpcp-price-form-field__currency-symbol-container.--currency-symbol-on-right input {
+  padding-right: 20px;
+}
+.awpcp-choice-form-field .awpcp-form-field__label {
+  margin-bottom: 8px;
+}
+@media (min-width: 1024px) {
+  /* Styles for the fields used to enter the classified details. */
+  .awpcp-form-field {
+    padding-left: 150px;
+  }
+  .awpcp-form-field .awpcp-form-field__label {
+    float: left;
+    line-height: 2em;
+    margin-left: -150px;
+    width: 150px;
+  }
+  .awpcp-form-field select {
+    min-width: 25%;
+    width: auto;
+  }
+  .awpcp-price-form-field__currency-symbol-container.--currency-symbol-on-left span {
+    top: 4px;
+  }
+  .awpcp-price-form-field__currency-symbol-container.--currency-symbol-on-right span {
+    top: 4px;
+  }
+}
 /* Layout
  --------------------------------------------------------------------------- */
 #wpbody-content .metabox-holder {
