Add new Category Selector powered by Select2.

--- a/resources/less/components/category-dropdown.less
+++ b/resources/less/components/category-dropdown.less
@@ -1,13 +1,8 @@
 .awpcp-category-dropdown {
-    margin-right: 5px;
-
-    :last-of-type {
-        margin-right: 0;
-    }
+    width: 100%;
 }
 
-@media only screen and (max-width: 480px) {
-    .awpcp-category-dropdown {
-        margin-right: 0;
-    }
+.select2-container--default .select2-selection--multiple .select2-selection__rendered li {
+    border-top: none;
+    border-bottom: none;
 }
