--- a/resources/less/admin.less
+++ b/resources/less/admin.less
@@ -23,6 +23,7 @@
 @import 'admin/modules/import-listings.less';
 @import 'admin/modules/fees.less';
 @import 'admin/modules/manage-categories.less';
+@import 'admin/modules/listings-admin-page.less';
 @import 'admin/modules/quick-view-listing-admin-page.less';
 
 @import 'components/admin-sidebar.less';
