Add search modes for Listings table. (#2055)
- Title
- Keyword
- Contact Name
- Contact Phone
- User
- Payer Email
- Location.

--- a/resources/less/admin/modules/listings-admin-page.less
+++ b/resources/less/admin/modules/listings-admin-page.less
@@ -22,3 +22,8 @@
 .select2-dropdown {
     border-color: @select2-border-color;
 }
+
+.awpcp-search-mode-dropdown {
+    float: left;
+    margin: 0 4px 0 0;
+}
