--- a/resources/less/admin/modules/listings-admin-page.less
+++ b/resources/less/admin/modules/listings-admin-page.less
@@ -27,3 +27,11 @@
     float: left;
     margin: 0 4px 0 0;
 }
+
+.column-taxonomy-awpcp_listing_category,
+.column-awpcp-start-date,
+.column-awpcp-end-date,
+.column-awpcp-renewed-date,
+.column-awpcp-payment-term {
+    width: 10%;
+}
