Add beta version of the Listing Fields Submit Listing Section.

--- a/resources/less/form-fields.tiny.less
+++ b/resources/less/form-fields.tiny.less
@@ -44,8 +44,10 @@
 }
 .awpcp-price-form-field__currency-symbol-container.--currency-symbol-on-left {
     span {
+        line-height: 20px;
+        margin-top: -10px;
         position: absolute;
-        top: 8px;
+        top: 50%;
         left: 8px;
     }
 
