--- a/resources/less/frontend/modules/submit-listing-page.less
+++ b/resources/less/frontend/modules/submit-listing-page.less
@@ -4,6 +4,7 @@
     .awpcp-rounded-box;
 
     background-color: #fff;
+    margin-bottom: 8px;
     padding: 0;
 
     .awpcp-submit-listing-section-title {
