--- a/resources/less/messages.less
+++ b/resources/less/messages.less
@@ -1,4 +1,4 @@
-html, #classiwrapper {
+body:not(.wp-admin), #classiwrapper {
     .awpcp-message {
         background-color: #FFFBCC;
         border: 1px solid #CCC;
