Adjust appearance of Payment Terms on Submit Listing page.

--- a/resources/less/components/payment-terms-list.less
+++ b/resources/less/components/payment-terms-list.less
@@ -119,6 +119,7 @@
 
             .awpcp-payment-term-name {
                 font-size: 1.2em;
+                text-align: left;
             }
         }
 
@@ -129,8 +130,10 @@
             width: 30%;
 
             label {
+                align-self: center;
                 order: 2;
                 font-size: 1em;
+                width: auto;
             }
 
             .awpcp-payment-term-duration {
