Add 'Loading classified fields' message to Order section.

--- a/resources/less/frontend.less
+++ b/resources/less/frontend.less
@@ -4,6 +4,7 @@
 // @import 'common/forms.less';
 @import 'common/state.less';
 @import 'common/thickbox.less';
+@import 'common/spinner.less';
 @import 'common.less';
 @import 'colors.less';
 @import 'icons.less';
