--- a/resources/less/frontend/modules/submit-listing-page.less
+++ b/resources/less/frontend/modules/submit-listing-page.less
@@ -34,4 +34,13 @@
     .awpcp-order-submit-listing-section--selected-categories {
         font-weight: bold;
     }
+
+    .awpcp-order-submit-listing-section--loading-message {
+        display: inline-block;
+
+        .awpcp-spinner {
+            margin: 0 6px 0 4px;
+            visibility: visible;
+        }
+    }
 }
