--- a/resources/less/common/spinner.less
+++ b/resources/less/common/spinner.less
@@ -1,9 +1,23 @@
 .awpcp-spinner {
-    background: url('/wp-admin/images/spinner.gif') center center no-repeat;
-    display: none;
-    height: 20px;
-    width: 20px;
-}
-.awpcp-spinner-visible {
+    background: url(../images/spinner.gif) no-repeat;
+    background-size: 20px 20px;
     display: inline-block;
+    float: right;
+    vertical-align: middle;
+    opacity: .7;
+    filter: alpha(opacity=70);
+    width: 20px;
+    height: 20px;
+    margin: 4px 10px 0;
+    visibility: hidden;
+}
+
+.awpcp-spinner-visible, .awpcp-spinner.is-active {
+    visibility: visible
+}
+
+@media print,(-webkit-min-device-pixel-ratio: 1.25),(min-resolution:120dpi) {
+    .awpcp-spinner {
+        background-image: url(../images/spinner-2x.gif)
+    }
 }
