--- a/resources/less/frontend/modules/submit-listing-page.less
+++ b/resources/less/frontend/modules/submit-listing-page.less
@@ -11,9 +11,15 @@
         background: #d2d2d2;
         color: #333;
         cursor: pointer;
+        float: none;
         font-size: 1em;
         margin: 0;
         padding: 2px 4px;
+
+        span {
+            float: right;
+            margin: 2px;
+        }
     }
 
     .awpcp-submit-listing-section-content {
