Update Appearance of Media Manager.

--- a/resources/less/admin/modules/edit-post-admin-page.less
+++ b/resources/less/admin/modules/edit-post-admin-page.less
@@ -56,9 +56,14 @@
     .awpcp-tab-panel {
         display: none;
         padding: 0 12px;
+        width: 100%;
     }
     .awpcp-tab-panel-active {
         display: block;
+    }
+
+    .awpcp-listing-fields--media-manager-tab-panel {
+        padding-top: 12px;
     }
 }
 
