--- a/resources/less/components/form-steps.less
+++ b/resources/less/components/form-steps.less
@@ -1,4 +1,6 @@
 .awpcp-form-steps {
+    margin-bottom: 10px;
+
     .awpcp-form-steps-step {
         background: #FEFEFE;
         border-width: 1px 1px 1px 0;
@@ -10,12 +12,12 @@
 
         &:first-child {
             border-left-width: 1px;
-            border-bottom-left-radius: 4px;
-            border-top-left-radius: 4px;
+            border-bottom-left-radius: 2px;
+            border-top-left-radius: 2px;
         }
         &:last-child {
-            border-bottom-right-radius: 4px;
-            border-top-right-radius: 4px;
+            border-bottom-right-radius: 2px;
+            border-top-right-radius: 2px;
         }
     }
 
