Fix frontend Renew Ad page.

--- a/resources/less/legacy/frontend.less
+++ b/resources/less/legacy/frontend.less
@@ -87,6 +87,11 @@
 
 .awpcp-page .awpcp-credit-plans-table {
     border-bottom: none;
+
+    tr td label {
+        display: inline-block;
+        margin-left: 4px;
+    }
 }
 .awpcp-page .awpcp-credit-plans-table tfoot .clear-selection input {
     display: none;
@@ -97,6 +102,7 @@
     font-size: 0.9em;
     font-weight: normal;
     line-height: 1em;
+    margin: 0;
     padding: 4px 6px;
 }
 .awpcp-page .awpcp-credit-plans-table tfoot .clear-selection label:hover {
