Update appearance of Listings Table Search form fields.

--- a/resources/less/admin/modules/listings-admin-page.less
+++ b/resources/less/admin/modules/listings-admin-page.less
@@ -31,9 +31,13 @@
     border-color: @select2-border-color;
 }
 
-.awpcp-search-mode-dropdown {
+.awpcp-search-mode-dropdown-container {
     float: left;
     margin: 0 4px 0 0;
+
+    label {
+        margin-right: 4px;
+    }
 }
 
 .column-taxonomy-awpcp_listing_category,
