Display all listing dates on a single column. (#2100)

--- a/resources/less/admin/modules/listings-admin-page.less
+++ b/resources/less/admin/modules/listings-admin-page.less
@@ -41,9 +41,9 @@
 }
 
 .column-taxonomy-awpcp_listing_category,
-.column-awpcp-start-date,
-.column-awpcp-end-date,
-.column-awpcp-renewed-date,
 .column-awpcp-payment-term {
     width: 10%;
+}
+.column-awpcp-dates {
+    width: 20%;
 }
