Fix settings section on Credit Plans admin screen.

--- a/resources/less/admin.less
+++ b/resources/less/admin.less
@@ -24,6 +24,7 @@
 @import 'admin/modules/fees.less';
 @import 'admin/modules/manage-categories.less';
 
+@import 'admin/modules/credit-plans-admin-page.less';
 @import 'admin/modules/edit-post-admin-page.less';
 @import 'admin/modules/listings-admin-page.less';
 @import 'admin/modules/quick-view-listing-admin-page.less';
