Update columns on Fees admin page. (#2103)

--- a/resources/less/admin/modules/fees.less
+++ b/resources/less/admin/modules/fees.less
@@ -10,20 +10,33 @@
     float: right;
 }
 
-.awpcp-admin-fees .inline-edit-col
+.awpcp-admin-fees {
+    .column-categories {
+        width: 17%;
 
-.awpcp-admin-fees .column-categories {
-    width: 17%;
-}
-.awpcp-admin-fees .column-categories .category-checklist {
-    height: 100px;
-    min-width: 100px;
-}
-.awpcp-admin-fees .column-categories .category-checklist li {
-    margin-bottom: 3px;
-}
-.awpcp-admin-fees .column-categories .category-checklist label {
-    font-size: 0.9em;
+        .category-checklist {
+            height: 100px;
+            min-width: 100px;
+        }
+        .category-checklist li {
+            margin-bottom: 3px;
+        }
+        .category-checklist label {
+            font-size: 0.9em;
+        }
+    }
+
+    .column-attributes {
+        width: 25%;
+    }
+
+    .column-private {
+        width: 8%;
+    }
+
+    .column-price, .column-credits {
+        width: 13%;
+    }
 }
 
 
