Show Payment Status under Payment Term name.

--- a/resources/less/admin/modules/listings-admin-page.less
+++ b/resources/less/admin/modules/listings-admin-page.less
@@ -40,10 +40,12 @@
     }
 }
 
-.column-taxonomy-awpcp_listing_category,
-.column-awpcp-payment-term {
+.column-taxonomy-awpcp_listing_category {
     width: 10%;
 }
 .column-awpcp-dates {
     width: 20%;
+}
+.column-awpcp-payment-term {
+    width: 15%;
 }
