Add Status column to All Classifieds table.

--- a/resources/less/admin/modules/listings-admin-page.less
+++ b/resources/less/admin/modules/listings-admin-page.less
@@ -40,7 +40,8 @@
     }
 }
 
-.column-taxonomy-awpcp_listing_category {
+.column-taxonomy-awpcp_listing_category,
+.column-awpcp-status {
     width: 10%;
 }
 .column-awpcp-dates {
