Fix menu icon for Manual Upgrade menu item.

--- a/resources/less/admin-menu.less
+++ b/resources/less/admin-menu.less
@@ -1,5 +1,6 @@
 /* Icon for the plugin's main menu and the plugin's main post type. */
 #adminmenu .toplevel_page_awpcp,
+#adminmenu .toplevel_page_awpcp-admin-upgrade,
 #adminmenu .menu-icon-awpcp_listing {
     .wp-menu-image {
         &::before {
