--- a/resources/less/admin-menu.less
+++ b/resources/less/admin-menu.less
@@ -1,5 +1,6 @@
 /* Icon for the plugin's main menu and the plugin's main post type. */
 #adminmenu .toplevel_page_awpcp,
+#adminmenu .toplevel_page_awpcp-panel,
 #adminmenu .toplevel_page_awpcp-admin-upgrade,
 #adminmenu .menu-icon-awpcp_listing {
     .wp-menu-image {
@@ -19,4 +20,8 @@
             content: "\f1ea";
         }
     }
+}
+
+.awpcp-admin-quick-view-listing-submenu-item {
+    display: none;
 }
