Update appearance of images and other attachments.

--- a/resources/less/frontend.less
+++ b/resources/less/frontend.less
@@ -39,6 +39,7 @@
 @import 'components/multiple-region-selector-form-table.less';
 @import 'components/search-listings-widget.less';
 
+@import 'frontend/modules/attachments-list.less';
 @import 'frontend/modules/submit-listing-page.less';
 @import 'frontend/modules/listings.less';
 @import 'frontend/modules/listing-excerpt.less';
