Update appearance of Region Selector on Search Widget.

--- a/resources/less/components/search-listings-widget.less
+++ b/resources/less/components/search-listings-widget.less
@@ -1,5 +1,7 @@
 .widget_awpcp_search_widget {
     form {
+        margin-bottom: 8px;
+
         label {
             font-size: 13px;
             font-size: 0.9rem;
@@ -47,12 +49,21 @@
 
         .awpcp-region-selector {
             background: none;
+            border: none;
+            padding: 0;
 
             .awpcp-region-selector-partials {
                 margin: 0;
 
+                .awpcp-region-selector-partial {
+                    padding: 0;
+                }
+
                 label {
-                    margin-right: 0;
+                    float: none;
+                    line-height: 1.2rem;
+                    margin: 1px 0;
+                    width: auto;
                 }
             }
         }
