Replace usage 'classified' adjective with 'ad' noun.

--- a/resources/less/form-fields.large.less
+++ b/resources/less/form-fields.large.less
@@ -1,4 +1,4 @@
-/* Styles for the fields used to enter the classified details. */
+/* Styles for the fields used to enter the classified ad details. */
 @label_width: 150px;
 
 .awpcp-form-field {
