--- a/resources/less/form-fields.tiny.less
+++ b/resources/less/form-fields.tiny.less
@@ -1,4 +1,4 @@
-/* Styles for the fields using to enter the classified details. */
+/* Styles for the fields using to enter the classified ad details. */
 .awpcp-form-field {
     margin: 1em 0;
 
