Fix appearance of * for required fields.

--- a/resources/less/form-fields.tiny.less
+++ b/resources/less/form-fields.tiny.less
@@ -1,4 +1,8 @@
 /* Styles for the fields using to enter the classified ad details. */
+.awpcp-form-spacer label span.required {
+    padding: 0 2px;
+}
+
 .awpcp-form-field {
     margin: 1em 0;
 
