Update appearance of form fields on Submit Listing form.

--- a/resources/less/components/multiple-region-selector.less
+++ b/resources/less/components/multiple-region-selector.less
@@ -22,10 +22,9 @@
     }
 
     .awpcp-region-selector {
-        background: rgba(0, 0, 0, 0.02);
         margin-left: 0;
         margin-bottom: 5px;
-        padding: 4px 0px;
+        padding: 0;
 
         .awpcp-region-selector-partials {
             padding: 2px;
@@ -33,7 +32,6 @@
 
         .awpcp-region-selector-partial {
             list-style-type: none;
-            margin: 0;
 
             label {
                 display: block;
