Remove decoration around submit buttons on Submit Listing.

--- a/resources/less/frontend/modules/submit-listing-page.less
+++ b/resources/less/frontend/modules/submit-listing-page.less
@@ -61,6 +61,20 @@
     }
 }
 
+.awpcp-submit-listing-section-without-decoration {
+    background: none;
+    border: none;
+
+    .awpcp-submit-listing-section-title {
+        display: none;
+    }
+
+    .awpcp-submit-listing-section-content {
+        padding-left: 0;
+        padding-right: 0;
+    }
+}
+
 .awpcp-order-submit-listing-section__edit_mode > form {
     margin: 0;
 }
