Update appearance of social buttons and flag link.

--- a/resources/less/admin.less
+++ b/resources/less/admin.less
@@ -36,6 +36,7 @@
 @import 'components/asynchronous-tasks.less';
 @import 'components/form-steps.less';
 @import 'components/listing-content-legacy.less';
+@import 'components/social-buttons.less';
 @import 'components/media-manager.less';
 @import 'components/media-uploader.less';
 @import 'components/payment-terms-list.less';
