--- a/resources/less/frontend.less
+++ b/resources/less/frontend.less
@@ -27,6 +27,7 @@
 @import 'components/listings-widget.less';
 @import 'components/listing-actions.less';
 @import 'components/listing-content-legacy.less';
+@import 'components/social-buttons.less';
 @import 'components/main-menu.less';
 @import 'components/media-manager.less';
 @import 'components/media-uploader.less';
