--- a/resources/less/frontend.less
+++ b/resources/less/frontend.less
@@ -31,6 +31,7 @@
 @import 'components/main-menu.less';
 @import 'components/media-manager.less';
 @import 'components/media-uploader.less';
+@import 'components/pagination.less';
 @import 'components/payment-terms-list.less';
 // TODO: Do we need to remove payment-terms-table.less?
 @import 'components/payment-terms-table.less';
