--- a/resources/less/components/category-switcher.less
+++ b/resources/less/components/category-switcher.less
@@ -1,15 +1,18 @@
 .awpcp-category-switcher {
     float: left;
-    margin-bottom: 10px;
+    margin: 0 0 10px;
     width: 50%;
 
     .awpcp-category-dropdown-container {
+        align-items: center;
         display: flex;
         flex-direction: row;
+        flex-wrap: nowrap;
+        justify-content: stretch;
 
         .awpcp-category-dropdown-label {
             flex: 0 1 auto;
-            margin-right: 8px;
+            margin: 0 8px 0 0;
         }
         .awpcp-category-dropdown {
             flex: 0 1 auto;
