Add Date Range filter to Classified Ads admin page. (#2107)

--- a/resources/less/admin/modules/listings-admin-page.less
+++ b/resources/less/admin/modules/listings-admin-page.less
@@ -27,6 +27,13 @@
     border-color: @select2-border-color;
 }
 
+[name="awpcp_date_range_placeholder"] {
+    height: 28px;
+    margin: 0 6px 0 0;
+    min-width: 270px;
+    vertical-align: bottom;
+}
+
 .awpcp-search-mode-dropdown-container {
     float: left;
     margin: 0 4px 0 0;
