Show Listing Table Actions as buttons with icons. (#2099)

--- a/resources/less/admin/modules/listings-admin-page.less
+++ b/resources/less/admin/modules/listings-admin-page.less
@@ -53,3 +53,13 @@
 .column-awpcp-payment-term {
     width: 15%;
 }
+
+.awpcp-action-button {
+    height: 26px !important;
+    line-height: 24px !important;
+    margin: 0 2px 2px 0 !important;
+    padding-left: 6px !important;
+    padding-right: 6px !important;
+    text-align: center;
+    width: 28.625px;
+}
