Allow Reply to Listing email template to be modified. (#2080)

--- a/resources/less/admin/modules/settings-admin-page.less
+++ b/resources/less/admin/modules/settings-admin-page.less
@@ -104,6 +104,34 @@
             padding: 0 0 20px;
         }
     }
+
+    .awpcp-email-template-setting {
+        label {
+            display: block;
+            font-weight: bold;
+        }
+
+        .regular-text {
+            width: 100%;
+        }
+
+        dl {
+            display: flex;
+            flex-wrap: wrap;
+        }
+        dl dt {
+            display: inline-block;
+            flex: 0 0 auto;
+            font-weight: bold;
+            width: 30%;
+        }
+        dl dd {
+            display: inline-block;
+            flex: 0 0 auto;
+            margin-left: 0;
+            width: 70%;
+        }
+    }
 }
 
 .awpcp-settings-label-mobile {
